syntax = "proto3";
package stats.service.collector;

option java_package = "ru.practicum.grpc.stats.action";

import "google/protobuf/timestamp.proto";

enum ActionTypeProto {
  ACTION_VIEW = 0;
  ACTION_REGISTER = 1;
  ACTION_LIKE = 2;
}

message UserActionRequest {
  int64 user_id = 1;
  int64 event_id = 2;
  ActionTypeProto action_type = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message UserActionResponse {
  bool success = 1;
}